# ot-harjoitustyo-Leo

./: .gitignore  README.md
documentation/: tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/: maksukortti.py
laskarit/viikko2/unicafe/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
